# aws-resource-inventory

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  ec2_scanner-OLD.py  pyproject.toml  requirements.txt  sso-config.json.example  verify_setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  inventory-scan.yml
output/: README.md
src/aws_resource_inventory/: __init__.py  aws_auth.py  config.py  excel_exporter.py  main.py
src/aws_resource_inventory/scanners/: __init__.py  acm.py  apigateway.py  autoscaling.py  base.py  cloudformation.py  cloudfront.py  cloudwatch.py  dynamodb.py  ebs.py  ec2.py  ecs.py  efs.py  eip.py  eks.py  elasticache.py  elb.py  iam.py  kms.py  lambda_functions.py  nat_igw.py  rds.py  redshift.py  s3.py  secrets.py  security_groups.py  sns.py  sqs.py  tgw.py  vpc.py
tests/: conftest.py  test_config.py  test_integration.py  test_scanners.py
